--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Главаная страница</title>
+    <link rel="stylesheet" type="text/css" href="css/default.css">
 </head>
 <body>
     
